GCP as beta only feature
https://issues.redhat.com/browse/COST-1016

--- a/main.yml
+++ b/main.yml
@@ -337,7 +337,7 @@ infrastructure:
         permissions:
           - method: apiRequest
             args:
-              - url: '/api/cost-management/v1/user-access/?type=GCP'
+              - url: '/api/cost-management/v1/user-access/?type=GCP&beta=true'
                 accessor: 'data'
 
 ingress:
