--- a/main.yml
+++ b/main.yml
@@ -714,6 +714,9 @@ rhel-sw:
 
 ros:
   title: Resource Optimization
+  api:
+    versions:
+      - v0
   channel: '#team-ros'
   deployment_repo: https://github.com/RedHatInsights/ros-frontend-build
   frontend:
