--- a/main.yml
+++ b/main.yml
@@ -454,6 +454,8 @@ patch:
         default: true
       - id: systems
         title: Systems
+      - id: packages
+        title: Packages
   source_repo: https://github.com/RedHatInsights/patchman-ui
 
 policies:
