Add Ryan and Karel to CODEOWNERS

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,3 @@
 # Asa is an owner by default bc this whole crazy thing was his idea.
-*                       @kruai
+# Karel and Ryan are also getting dragged into this (sorry) as Asa transitions away from Fakamai/Akamai.
+*                       @kruai @karelhala @ryelo
