--- a/main.yml
+++ b/main.yml
@@ -767,10 +767,11 @@ sources:
     versions:
       - v1
     isBeta: true
-  channel: '#insights_topology_svc'
+  channel: '#sources'
   deployment_repo: https://github.com/RedHatInsights/sources-ui-deploy
   frontend:
     title: Sources
+    module: sources#./RootApp
     paths:
       - /settings/sources
   source_repo: https://github.com/RedHatInsights/sources-ui
