add federation to access-requests

--- a/main.yml
+++ b/main.yml
@@ -6,6 +6,11 @@ access-requests:
     versions:
       -v1
   frontend:
+    module:
+      appName: access-requests
+      scope: accessRequests
+      module: ./RootApp
+      group: internal
     title: Access Requests
     paths:
       - /internal/access-requests
