--- a/main.yml
+++ b/main.yml
@@ -268,6 +268,10 @@ cost-management:
   frontend:
     paths:
       - /cost-management
+    module:
+      appName: cost-management
+      scope: costManagement
+      module: ./RootApp
     sub_apps:
       - id: ''
         title: Overview
