add module for cost management (#406)
* add module for cost management

* add group

--- a/main.yml
+++ b/main.yml
@@ -209,6 +209,11 @@ cost-management:
   frontend:
     paths:
       - /cost-management
+    module:
+      appName: cost-management
+      group: cost-management
+      scope: costManagement
+      module: ./RootApp
     sub_apps:
       - id: ''
         title: Overview
