fix(starter): add starter app to ci-beta

--- a/main.yml
+++ b/main.yml
@@ -457,6 +457,7 @@ insights:
       - id: remediations
       - id: registration
       - id: ros
+      - id: starter
   top_level: true
 
 integrations:
@@ -807,6 +808,20 @@ staging:
       - id: ruledev
       - id: policies
   top_level: true
+
+starter:
+  title: Starter
+  api:
+    versions:
+      - v1
+    apiName: insights
+  channel: '#forum-clouddot-ui'
+  deployment_repo: https://github.com/RedHatInsights/frontend-starter-app-build
+  frontend:
+    module: starter#./RootApp
+    paths:
+      - /insights/starter
+  source_repo: https://github.com/RedHatInsights/frontend-starter-app
 
 storybook:
   channel: '#flip-mode-squad'
