--- a/main.yml
+++ b/main.yml
@@ -477,6 +477,39 @@ openshift:
   source_repo:
   top_level: true
 
+application-services:
+  title: OpenShift Application Services
+  api:
+    isBeta: true
+  deployment_repo: https://github.com/RedHatInsights/rhosak-dashboard-build
+  frontend:
+    title: OpenShift Application Services
+    paths:
+      - /application-services
+    sub_apps:
+      - id: openshift-streams
+        title: "OpenShift Streams for Apache Kafka"
+        default: true
+      - id: quickstarts
+        title: "Quick Starts"
+  top_level: true
+  source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
+
+rhosak-data-plane-ui-build:
+  title: Data Plane UI for RHOSAK
+  deployment_repo: https://github.com/RedHatInsights/rhosak-data-plane-ui-build
+  frontend:
+    paths:
+      - /application-services/rhosak-data-plane-ui-build
+
+rhosak-control-plane-ui-build:
+  title: Control Plane UI for RHOSAK
+  deployment_repo: https://github.com/RedHatInsights/rhosak-control-plane-ui-build
+
+rhoas-guides-build:
+  title: Guides for RHOAS
+  deployment_repo: https://github.com/RedHatInsights/rhoas-guides-build
+
 patch:
   title: Patch
   api:
