--- a/main.yml
+++ b/main.yml
@@ -457,7 +457,6 @@ insights:
       - id: remediations
       - id: registration
       - id: ros
-      - id: starter
   top_level: true
 
 integrations:
@@ -805,6 +804,7 @@ staging:
   title: Staging Bundle
   frontend:
     sub_apps:
+      - id: starter
       - id: ruledev
       - id: policies
   top_level: true
@@ -820,7 +820,7 @@ starter:
   frontend:
     module: starter#./RootApp
     paths:
-      - /insights/starter
+      - /staging/starter
   source_repo: https://github.com/RedHatInsights/frontend-starter-app
 
 storybook:
