--- a/main.yml
+++ b/main.yml
@@ -658,6 +658,7 @@ policies:
   channel: '#cloudservices-policies'
   deployment_repo: https://github.com/RedHatInsights/policies-ui-frontend-build
   frontend:
+    module: policies#./RootApp
     section: security
     paths:
       - /insights/policies
