--- a/main.yml
+++ b/main.yml
@@ -473,6 +473,11 @@ notifications:
   frontend:
     paths:
       - /settings/notifications
+    sub_apps:
+      - id: insights
+        title: Red Hat Insights
+        group: notifications
+        default: true
   source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 openshift:
@@ -650,6 +655,8 @@ settings:
     sub_apps:
       - id: my-user-access
         default: true
+      - id: integrations
+      - id: notifications
       - id: rbac
       - id: sources
       - id: applications
