Update Opneshift and App services navigation (#441)

--- a/main.yml
+++ b/main.yml
@@ -605,8 +605,6 @@ openshift:
     paths:
       - /openshift
     sub_apps:
-      - id: overview
-        title: Overview
       - id: ''
         title: Cluster Management
         group: openshift
@@ -615,9 +613,17 @@ openshift:
         title: Subscriptions
         sub_apps:
           - id: openshift-sw
-            title: OpenShift
+            title: Container Platform
             group: subscriptions
-            reload: ../subscriptions/openshift-sw
+            reload: ../subscriptions/openshift-sw/ocp
+          - id: openshift-dedicated
+            title: Dedicated
+            group: subscriptions
+            reload: ../subscriptions/openshift-sw/dedicated
+          - id: opneshift-sw-documentation
+            title: Documentation
+            group: subscriptions
+            navigate: https://access.redhat.com/documentation/en-us/cost_management_service/
         group: openshift
       - id: cost-management
         title: Cost Management
@@ -652,6 +658,13 @@ openshift:
                 args:
                   - url: '/api/cost-management/v1/user-access/?type=AZURE'
                     accessor: 'data'
+          - id: gcp
+            title: Google Cloud Platform
+            permissions:
+              - method: apiRequest
+                args:
+                  - url: '/api/cost-management/v1/user-access/?type=GCP&beta=true'
+                    accessor: 'data'
           - id: cost-models
             title: Cost models
             group: cost-management
@@ -680,11 +693,23 @@ application-services:
     paths:
       - /application-services
     sub_apps:
-      - id: openshift-streams
-        title: "OpenShift Streams for Apache Kafka"
+      - id: ''
+        title: OpenShift Streams for Apache Kafka
         default: true
-      - id: quickstarts
-        title: "QuickStarts"
+        sub_apps:
+          - id: openshift-streams
+            title: Kafka instances
+          - id: service-accounts
+            title: Service Accounts
+          - id: resources
+            title: Resources
+          - id: streams-documentation
+            title: Documentation
+            navigate: https://access.redhat.com/documentation/en-us/red_hat_openshift_streams_for_apache_kafka
+      - id: api-management
+        title: API Management       
+      - id: data-science
+        title: Data Science
   top_level: true
   source_repo: https://github.com/bf2fc6cc711aee1a0c2a/mk-ui-host
 
