Add to settings menu and add insights submenu (#432)
* Add to settings menu and add insights submenu

* Fix app order in settings

--- a/main.yml
+++ b/main.yml
@@ -473,6 +473,11 @@ notifications:
   frontend:
     paths:
       - /settings/notifications
+    sub_apps:
+      - id: insights
+        title: Red Hat Insights
+        group: notifications
+        default: true
   source_repo: https://github.com/RedHatInsights/notifications-frontend
 
 openshift:
@@ -671,6 +676,8 @@ settings:
         default: true
       - id: rbac
       - id: sources
+      - id: integrations
+      - id: notifications
       - id: applications
 
 sources:
