--- a/main.yml
+++ b/main.yml
@@ -881,6 +881,9 @@ settings:
       - id: notifications
       - id: sed
       - id: applications
+      - id: settings-documentation
+        title: Documentation
+        navigate: https://access.redhat.com/documentation/red_hat_cloud_platform/
 
 sources:
   title: Discovered Inventory
