--- a/main.yml
+++ b/main.yml
@@ -672,7 +672,7 @@ openshift:
           - id: cost-management-docs
             title: Cost Management Documentation
             navigate: https://access.redhat.com/documentation/en-us/openshift_container_platform/4.7/#category-cost-management
-          
+
   top_level: true
 
 streams:
@@ -753,6 +753,12 @@ patch:
       - id: packages
         title: Packages
   source_repo: https://github.com/RedHatInsights/patchman-ui
+
+playbook-dispatcher:
+  title: Playbook Dispatcher
+  api:
+    versions:
+      - v1
 
 policies:
   title: Policies
@@ -971,7 +977,7 @@ subscriptions:
       - id: manifests
         title: Manifests
 
-      
+
   source_repo: https://github.com/RedHatInsights/curiosity-frontend
 
 topological-inventory:
