update id to connector

--- a/main.yml
+++ b/main.yml
@@ -754,7 +754,7 @@ rbac:
         title: Groups
   source_repo: https://github.com/RedHatInsights/insights-rbac-ui
 
-sed:
+connector:
   title: Red Hat Connector
   api:
     versions:
@@ -762,7 +762,7 @@ sed:
   deployment_repo: https://github.com/RedHatInsights/sed-frontend-build
   frontend:
     title: Red Hat Connector
-    module: sed#./RootApp
+    module: connector#./RootApp
     paths:
       - /settings/connector
   source_repo: https://github.com/RedHatInsights/sed-frontend
@@ -832,7 +832,7 @@ settings:
       - id: sources
       - id: integrations
       - id: notifications
-      - id: sed
+      - id: connector
       - id: applications
       - id: settings-documentation
         title: Documentation
