--- a/main.yml
+++ b/main.yml
@@ -567,6 +567,13 @@ my-user-access:
       - /settings
       - /settings/my-user-access
 
+notification:
+  title: Notifications
+  frontend:
+    sub_apps:
+      - id: insights
+        title: Insights
+
 notifications:
   title: Notifications
   api:
@@ -974,6 +981,7 @@ user-preferences:
       - id: email
         title: Email Preferences
         default: true
+      - id: notification
   source_repo: https://github.com/RedHatInsights/user-preferences-frontend
 
 vulnerability:
